@@ -41,15 +41,18 @@ has server => (
     },
 );
 
-has airplane => (
-    is => 'ro', isa => 'Bool',
-    lazy => 1,
-    default => sub {
-        exists $_[0]->payload->{airplane}
-            ? $_[0]->payload->{airplane}
-            : 0;
-    },
-);
+foreach my $option (qw(airplane surgical_podweaver))
+{
+    has $option => (
+        is => 'ro', isa => 'Bool',
+        lazy => 1,
+        default => sub {
+            exists $_[0]->payload->{$option}
+                ? $_[0]->payload->{$option}
+                : 0;
+        },
+    );
+}
 
 has copy_file_from_release => (
     isa => 'ArrayRef[Str]',
@@ -73,8 +76,10 @@ has _requested_version => (
     },
 );
 
-my %installer_args = (
+# when these plugins are used, use these options
+my %extra_args = (
     ModuleBuildTiny => { ':version' => '0.004' },
+    PodWeaver => { ':version' => '4.005' },
 );
 
 # plugins that use the network when they run
@@ -153,7 +158,16 @@ sub configure
         'Git::Describe',
         [ PkgVersion            => { ':version' => '5.010', die_on_existing_version => 1, die_on_line_insertion => 1 } ],
         [ 'Authority'           => { authority => 'cpan:ETHER' } ],
-        [ PodWeaver             => { ':version' => '4.005', replacer => 'replace_with_comment', post_code_replacer => 'replace_with_nothing' } ],
+        [
+            do {
+                my $weaver = $self->surgical_podweaver ? 'SurgicalPodWeaver' : 'PodWeaver';
+                $weaver => {
+                    %{$extra_args{$weaver}},
+                    replacer => 'replace_with_comment',
+                    post_code_replacer => 'replace_with_nothing',
+                }
+            }
+        ],
         [ 'NextRelease'         => { ':version' => '4.300018', time_zone => 'UTC', format => '%-8v  %{yyyy-MM-dd HH:mm:ss\'Z\'}d%{ (TRIAL RELEASE)}T' } ],
         [ 'ReadmeAnyFromPod'    => { type => 'markdown', filename => 'README.md', location => 'build' } ],
 
@@ -187,7 +201,7 @@ sub configure
                 # but it is useful for people doing "cpanm --with-develop"
                 ( map {
                     Dist::Zilla::Util->expand_config_package_name($_) =>
-                        ($installer_args{$_} // {})->{':version'} // 0
+                        ($extra_args{$_} // {})->{':version'} // 0
                 } $self->installer ),
             } ],
         [ 'Prereqs' => pluginbundle_version => {
@@ -199,7 +213,7 @@ sub configure
         'RunExtraTests',
 
         # Install Tool
-        ( map { [ $_ => $installer_args{$_} // () ] } $self->installer ),
+        ( map { [ $_ => $extra_args{$_} // () ] } $self->installer ),
         'InstallGuide',
 
         # After Build
@@ -368,7 +382,7 @@ following F<dist.ini> (following the preamble):
     [Authority]
     authority = cpan:ETHER
 
-    [PodWeaver]
+    [PodWeaver] (or [SurgicalPodWeaver])
     :version = 4.005
     replacer = replace_with_comment
     post_code_replacer = replace_with_nothing
@@ -590,6 +604,15 @@ Defaults to false.
 A file, to be present in the build, which is copied back to the source
 repository at release time and committed to git. Can be repeated more than
 once. Defaults to: F<README.md>, F<LICENSE>, F<CONTRIBUTING>.
+
+=head2 surgical_podweaver
+
+=for stopwords PodWeaver SurgicalPodWeaver
+
+A boolean option, that when set, uses
+L<[SurgicalPodWeaver]|Dist::Zilla::Plugin::SurgicalPodWeaver> instead of
+L<[PodWeaver]|Dist::Zilla::Plugin::SurgicalPodWeaver>, but with all the same
+options. Defaults to false.
 
 =head2 other customizations
 
